--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "dist"
   ],
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@cognite/three-combo-controls": "^1.4.3",
     "@types/three": "^0.126.2",
     "antd": "^4.14.1",
