--- a/example/package.json
+++ b/example/package.json
@@ -17,10 +17,12 @@
     "@types/node": "file:../node_modules/@types/node",
     "@types/react": "file:../node_modules/@types/react",
     "@types/react-dom": "file:../node_modules/@types/react-dom",
+    "@types/styled-components": "^5.1.9",
     "omovi": "file:..",
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
     "react-scripts": "file:../node_modules/react-scripts",
+    "styled-components": "^5.2.1",
     "typescript": "file:../node_modules/typescript"
   },
   "devDependencies": {
