--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,8 +1,6 @@
 name: Deployment
 on:
-  push:
-    branches:
-      - main
+  pull_request:
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -19,8 +17,3 @@ jobs:
       run: npm install
     - name: Build page
       run: npm run build
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist
