--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "omovi",
-  "name": "omovi",
+  "short_name": "OMOVI",
+  "name": "Online Molecular Visualizer",
   "icons": [
     {
       "src": "favicon.ico",
