--- a/package.json
+++ b/package.json
@@ -66,8 +66,10 @@
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@cognite/three-combo-controls": "^1.4.3",
+    "@types/binary-parser": "^1.5.0",
     "@types/three": "^0.126.2",
     "antd": "^4.14.1",
+    "binary-parser": "^1.7.0",
     "kd-tree-javascript": "^1.0.3",
     "stats.js": "^0.17.0",
     "strict-uri-encode": "^1.1.0",
