--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "build": "microbundle-crl --no-compress --format modern,cjs --target node",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
     "dev": "concurrently --kill-others \"npm run start\" \"cd example; npm run start\"",
+    "build:all": "concurrently --kill-others \"npm run build\" \"cd example; npm run build\"",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
     "test:build": "run-s build",
     "test:lint": "eslint .",
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
-    "predeploy": "cd example && npm install && npm run build",
+    "predeploy": "npm run build:all",
     "deploy": "gh-pages -d example/build",
     "publish": ""
   },
