--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "kd-tree-javascript": "^1.0.3",
     "stats.js": "^0.17.0",
     "strict-uri-encode": "^1.1.0",
-    "three": "^0.126.1"
+    "three": "^0.126.1",
+    "uuid": "^3.4.0"
   }
 }
