--- a/example/package.json
+++ b/example/package.json
@@ -20,6 +20,7 @@
     "@types/styled-components": "^5.1.9",
     "omovi": "file:..",
     "react": "file:../node_modules/react",
+    "react-color-palette": "^5.0.0",
     "react-dom": "file:../node_modules/react-dom",
     "react-scripts": "file:../node_modules/react-scripts",
     "styled-components": "^5.2.1",
