--- a/package.json
+++ b/package.json
@@ -14,20 +14,9 @@
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs --target node",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
-    "dev": "concurrently --kill-others \"npm run start\" \"cd example; npm run start\"",
-    "build:all": "concurrently --kill-others \"npm run build\" \"cd example; npm run build\"",
     "prepare": "run-s build",
-    "test": "run-s test:unit test:lint test:build",
-    "test:build": "run-s build",
-    "test:lint": "eslint .",
-    "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "npm run build:all",
-    "deploy": "gh-pages -d example/build",
-    "publish": ""
-  },
-  "peerDependencies": {
-    "react": "^18.2.0"
+    "deploy": "gh-pages -d example/build"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -56,9 +45,6 @@
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^3.4.1",
     "typescript": "^3.9.10"
   },
   "files": [
