--- a/package.json
+++ b/package.json
@@ -8,53 +8,37 @@
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.tsx",
+  "types": "dist/types.d.ts",
   "engines": {
     "node": ">=10"
   },
   "scripts": {
-    "build": "microbundle-crl --no-compress --format modern,cjs --target node",
-    "start": "microbundle-crl watch --no-compress --format modern,cjs",
-    "prepare": "run-s build",
+    "watch": "parcel watch",
+    "build": "parcel build",
+    "start": "parcel src/index.html",
     "predeploy": "npm run build:all",
     "deploy": "gh-pages -d example/build"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^12.12.38",
+    "@parcel/packager-ts": "^2.8.0",
+    "@parcel/transformer-typescript-types": "^2.8.0",
     "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.7",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "babel-eslint": "^10.0.3",
-    "concurrently": "^6.0.2",
-    "cross-env": "^7.0.2",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-config-standard-react": "^9.2.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-standard": "^4.1.0",
+    "buffer": "^5.7.1",
     "gh-pages": "^2.2.0",
-    "microbundle-crl": "^0.13.10",
-    "npm-run-all": "^4.1.5",
+    "parcel": "^2.8.0",
     "prettier": "^2.0.4",
-    "typescript": "^3.9.10"
+    "process": "^0.11.10",
+    "typescript": "^3.9.10",
+    "util": "^0.12.5"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
-    "@ant-design/icons": "^4.6.2",
+    "@swc/helpers": "^0.4.14",
     "@types/binary-parser": "^1.5.0",
     "@types/three": "^0.126.2",
-    "antd": "^4.14.1",
     "binary-parser": "^1.7.0",
     "easy-peasy": "^5.0.3",
     "kd-tree-javascript": "^1.0.3",
