--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs --target node",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
+    "typecheck": "tsc --noEmit",
+    "lint": "prettier --check 'src/**/*.{ts,tsx}'",
+    "lint:fix": "prettier --write 'src/**/*.{ts,tsx}'",
+    "test": "echo \"Tests will be added later\" && exit 0",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -28,7 +32,7 @@
     "parcel": "^2.8.0",
     "prettier": "^2.0.4",
     "process": "^0.11.10",
-    "typescript": "^3.9.10",
+    "typescript": "^5.9.3",
     "util": "^0.12.5"
   },
   "files": [
