--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "buffer": "^5.7.1",
     "gh-pages": "^2.2.0",
     "parcel": "^2.8.0",
-    "prettier": "^2.0.4",
+    "prettier": "^3.7.2",
     "process": "^0.11.10",
     "typescript": "^5.9.3",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "uuid": "^13.0.0"
   },
   "files": [
     "dist"
@@ -48,7 +49,6 @@
     "microbundle-crl": "^0.13.11",
     "stats.js": "^0.17.0",
     "strict-uri-encode": "^1.1.0",
-    "three": "^0.164.1",
-    "uuid": "^3.4.0"
+    "three": "^0.164.1"
   }
 }
