--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "scripts": {
     "build": "microbundle-crl --no-compress --format modern,cjs --target node",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
+    "typecheck": "tsc --noEmit",
+    "lint": "prettier --check 'src/**/*.{ts,tsx}'",
+    "lint:fix": "prettier --write 'src/**/*.{ts,tsx}'",
+    "test": "echo \"Tests will be added later\" && exit 0",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -26,10 +30,11 @@
     "buffer": "^5.7.1",
     "gh-pages": "^2.2.0",
     "parcel": "^2.8.0",
-    "prettier": "^2.0.4",
+    "prettier": "^3.7.2",
     "process": "^0.11.10",
-    "typescript": "^3.9.10",
-    "util": "^0.12.5"
+    "typescript": "^5.9.3",
+    "util": "^0.12.5",
+    "uuid": "^13.0.0"
   },
   "files": [
     "dist"
@@ -44,7 +49,6 @@
     "microbundle-crl": "^0.13.11",
     "stats.js": "^0.17.0",
     "strict-uri-encode": "^1.1.0",
-    "three": "^0.164.1",
-    "uuid": "^3.4.0"
+    "three": "^0.164.1"
   }
 }
