feat: replace custom SSAO with N8AO library
- Replace custom SSAO implementation with N8AO for better quality and temporal stability
- Remove custom SSAO shaders (ssao.ts)
- Add N8AO and postprocessing dependencies
- Integrate N8AO into existing render pipeline using beautyRenderTarget
- Add TypeScript type declarations for n8ao module
- Remove deprecated useLegacyLights property
- Fix banding artifacts with modern SSAO implementation

--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "binary-parser": "^1.7.0",
     "easy-peasy": "^5.0.3",
     "kd-tree-javascript": "^1.0.3",
+    "n8ao": "^1.7.0",
+    "postprocessing": "^6.35.0",
     "stats.js": "^0.17.0",
     "strict-uri-encode": "^1.1.0",
     "three": "^0.164.1"
