feat: remove Travis CI config and gh-pages deployment
- Delete .travis.yml as GitHub Actions is now used for CI/CD
- Remove gh-pages npm package from devDependencies
- Remove deploy and predeploy scripts from package.json
- Deployment now handled by GitHub Actions workflow (.github/workflows/deploy.yaml)

--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "lint:fix": "prettier --write 'src/**/*.{ts,tsx}'",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:ui": "vitest --ui",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "test:ui": "vitest --ui"
   },
   "devDependencies": {
     "@parcel/packager-ts": "^2.8.0",
@@ -34,7 +32,6 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^4.0.14",
     "buffer": "^5.7.1",
-    "gh-pages": "^6.3.0",
     "jsdom": "^27.2.0",
     "parcel": "^2.8.0",
     "prettier": "^3.7.2",
